--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 11:05:02 2018</p>
+         Last Run: Sun Nov  4 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>0</td>
-                        <td>35</td>
-                        <td>1</td>
-                        <td>21</td>
-                        <td>NW</td>
-                        <td>76</td>
-                     </tr>
-                     <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>11</td>
                         <td>11</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>33</td>
                         <td>1</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>NNW</td>
-                        <td>73</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -58,11 +46,11 @@
                         <td>12</td>
                         <td>12</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>32</td>
                         <td>1</td>
-                        <td>21</td>
+                        <td>23</td>
                         <td>NNW</td>
-                        <td>65</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -90,7 +77,6 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "11",
-                 "11",
                  "12"
                ]
              },
@@ -101,7 +87,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "11",
                  "11",
                  "12"
                ]
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "35",
-                 "34"
+                 "33",
+                 "32"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "73",
-                 "65"
+                 "79",
+                 "68"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 11:05:02 2018</p>
+         Last Run: Sun Nov  4 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,20 +230,20 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>16</td>
+                        <td>10</td>
                         <td>62</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>11</td>
-                        <td>63</td>
+                        <td>9</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -273,12 +254,12 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-9</td>
-                        <td>11</td>
+                        <td>6</td>
                         <td>65</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>90</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,9 +357,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "11",
-                 "11"
+                 "10",
+                 "9",
+                 "6"
                ]
              },
              {
@@ -388,7 +369,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "63",
+                 "62",
                  "65"
                ]
              },
@@ -398,9 +379,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
+                 "95",
                  "92",
-                 "90"
+                 "89"
                ]
              }
            ]
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 11:05:02 2018</p>
+         Last Run: Sun Nov  4 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -465,10 +446,10 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>62</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -477,7 +458,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -488,8 +469,8 @@
                         <td>Clear</td>
                         <td>-9</td>
                         <td>-13</td>
-                        <td>2</td>
-                        <td>66</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -593,7 +574,7 @@
                "data":[
                  "3",
                  "3",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -602,9 +583,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
-                 "64",
-                 "66"
+                 "65",
+                 "66",
+                 "68"
                ]
              },
              {
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 11:05:02 2018</p>
+         Last Run: Sun Nov  4 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -678,13 +659,13 @@
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>3</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>40</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -692,11 +673,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -704,11 +685,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>33</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +716,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "0",
+                 "-1",
                  "0",
                  "0"
                ]
@@ -818,8 +799,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "55",
-                 "54",
-                 "53"
+                 "55",
+                 "52"
                ]
              },
              {
@@ -828,9 +809,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "36",
-                 "33"
+                 "38",
+                 "34",
+                 "31"
                ]
              }
            ]
