--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 12:05:02 2018</p>
+         Last Run: Sun Nov  4 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>11</td>
-                        <td>11</td>
-                        <td>0</td>
-                        <td>33</td>
-                        <td>1</td>
-                        <td>24</td>
-                        <td>NNW</td>
-                        <td>79</td>
-                     </tr>
-                     <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>0</td>
-                        <td>32</td>
+                        <td>3</td>
+                        <td>31</td>
                         <td>1</td>
                         <td>23</td>
                         <td>NNW</td>
-                        <td>68</td>
+                        <td>74</td>
                      </tr>
                   </tbody>
                </table>
@@ -65,7 +53,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -76,7 +63,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "11",
                  "12"
                ]
              },
@@ -87,7 +73,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "11",
                  "12"
                ]
              }
@@ -134,7 +119,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "01:00 PM",
              "02:00 PM"
            ],
            "datasets":[
@@ -144,8 +128,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0"
+                 "3"
                ]
              },
              {
@@ -154,8 +137,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
-                 "32"
+                 "31"
                ]
              },
              {
@@ -164,8 +146,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "68"
+                 "74"
                ]
              }
            ]
@@ -206,7 +187,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 12:05:02 2018</p>
+         Last Run: Sun Nov  4 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -230,36 +211,36 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>10</td>
-                        <td>62</td>
+                        <td>9</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NE</td>
-                        <td>95</td>
+                        <td>10</td>
+                        <td>NNE</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>9</td>
+                        <td>7</td>
                         <td>62</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
-                        <td>-9</td>
+                        <td>-10</td>
                         <td>6</td>
-                        <td>65</td>
+                        <td>63</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -288,7 +269,7 @@
                "data":[
                  "-9",
                  "-10",
-                 "-9"
+                 "-10"
                ]
              },
              {
@@ -357,8 +338,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
                  "9",
+                 "7",
                  "6"
                ]
              },
@@ -368,9 +349,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "63",
                  "62",
-                 "62",
-                 "65"
+                 "63"
                ]
              },
              {
@@ -379,9 +360,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
+                 "96",
                  "92",
-                 "89"
+                 "90"
                ]
              }
            ]
@@ -421,7 +402,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 12:05:02 2018</p>
+         Last Run: Sun Nov  4 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -446,11 +427,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>68</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>0</td>
+                        <td>6</td>
+                        <td>SW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -458,11 +439,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -470,7 +451,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -583,9 +564,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "66",
-                 "68"
+                 "68",
+                 "67",
+                 "69"
                ]
              },
              {
@@ -594,8 +575,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "0",
-                 "0",
+                 "1",
+                 "1",
                  "1"
                ]
              }
@@ -636,7 +617,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 12:05:02 2018</p>
+         Last Run: Sun Nov  4 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -658,26 +639,26 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-1</td>
-                        <td>3</td>
-                        <td>55</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>38</td>
+                        <td>-2</td>
+                        <td>3</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>W</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -685,11 +666,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>31</td>
+                        <td>SW</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -716,8 +697,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "0",
+                 "-2",
+                 "-2",
                  "0"
                ]
              },
@@ -728,8 +709,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "2"
                ]
              }
@@ -798,9 +779,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "55",
-                 "52"
+                 "57",
+                 "56",
+                 "54"
                ]
              },
              {
@@ -809,9 +790,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "34",
-                 "31"
+                 "41",
+                 "36",
+                 "33"
                ]
              }
            ]
