--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 15:05:02 2018</p>
+         Last Run: Sun Nov  4 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>11</td>
-                        <td>65</td>
+                        <td>10</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>10</td>
-                        <td>63</td>
+                        <td>11</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>92</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
-                        <td>-9</td>
+                        <td>-10</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>90</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-9",
                  "-9",
-                 "-9"
+                 "-10"
                ]
              },
              {
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
                  "10",
+                 "11",
                  "3"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "63",
-                 "65"
+                 "62",
+                 "64",
+                 "67"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "97",
                  "96",
-                 "92",
-                 "90"
+                 "91"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 15:05:02 2018</p>
+         Last Run: Sun Nov  4 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -261,7 +261,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -273,10 +273,10 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>33</td>
                      </tr>
                   </tbody>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
                  "64",
-                 "65"
+                 "63",
+                 "64"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 15:05:02 2018</p>
+         Last Run: Sun Nov  4 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
+                 "40",
                  "32",
-                 "25"
+                 "26"
                ]
              }
            ]
